--- a/recursion/index.html
+++ b/recursion/index.html
@@ -712,7 +712,7 @@
 									</td>
 								</tr>
 							</table>
-							<table>
+							<table style="padding:20 0 0 0">
 								<tr>
 									<td style="vertical-align:top; padding:0 0 0 00">2.</td>
 									<td style="vertical-align:top; padding:1 0 0 10">
@@ -721,7 +721,7 @@
 									</td>
 								</tr>
 							</table>
-							<table>
+							<table style="padding:20 0 0 0">
 								<tr>
 									<td style="vertical-align:top; padding:0 0 0 00">3.</td>
 									<td style="vertical-align:top; padding:1 0 0 10">
@@ -741,7 +741,7 @@
 									</td>
 								</tr>
 							</table>
-							<table>
+							<table style="padding:20 0 0 0">
 								<tr>
 									<td style="vertical-align:top">4.</td>
 									<td style="padding:1 20 0 10">
