--- a/recursion/index.html
+++ b/recursion/index.html
@@ -70,7 +70,7 @@
 		    padding-top:27
 		}
 		.c1p1 {
-		    height: 561 !important;
+		    height: 635 !important;
 		    overflow: scroll;
 		    font-size:15; 
 		    margin: 0 0 0 45;
@@ -78,7 +78,7 @@
 		    border-top: 1 solid #f2f2f2;
 		}
 		.c1p4 {
-		    height: 567 !important;
+		    height: 635 !important;
 		    overflow: scroll;
 		    font-size:15; 
 		    margin: 0 0 0 45;
@@ -601,18 +601,10 @@
 								width:50%">
 						<p style="padding-top:24; 
 									padding-left:48; 
-									color:grey; 
+									color:lightgrey; 
 									font-family:'Avenir', 'light'; 
 									font-size:18">
-							Discrete and Combinatorial Mathematics
-									<br>
-									<span style="font-size:16px">An Applied Introduction. 5E&ndash;PS</span>
-									<br>
-									&#9634; <span style="font-size:12px">RALPH P. GRIMALDI</span>
-									<br>
-							<span style="color:lightgrey; 
-											font-size:15">
-											Fundamental Principles of Counting</span>
+							Fundamental Principles of Counting
 						</p>
 						<div class="c1p1">
 							<table style="padding: 10 0 0 0">
@@ -817,16 +809,10 @@
 								width:50%">
 						<p style="padding-top:24; 
 									padding-left:48; 
-									color:grey; 
+									color:lightgrey; 
 									font-family:'Avenir', 'light'; 
 									font-size:18">
-							Discrete and Combinatorial Mathematics
-							<br>
-							<span style="font-size:16px">An Applied Introduction. 5E&ndash;PS</span>
-							<br>
-							&#9634; <span style="font-size:12px"> RALPH P. GRIMALDI</span> 
-							<br>
-							<span style="color:lightgrey; font-size:15px">Fundamental Principles of Counting</span>
+							Fundamental Principles of Counting
 						</p>
 						<div class="c1p4">
 							<table style="padding: 10 20 0 0">
@@ -1012,16 +998,10 @@
 								padding-right:0; 
 								width:50%">
 						<p style="padding:24 0 0 48; 
-									color:grey; 
+									color:lightgrey; 
 									font-family:'Avenir', 'light'; 
 									font-size:18">
-							Discrete and Combinatorial Mathematics
-							<br>
-							<span style="font-size:16">An Applied Introduction. 5E&ndash;PS</span>
-							<br>
-							&#9634; <span style="font-size:12"> RALPH P. GRIMALDI</span> 
-							<br>
-							<span style="color:lightgrey; font-size:15">Fundamental Principles of Counting</span>
+							Fundamental Principles of Counting
 						</p>
 						<div class="c1p6">
 							<table style="padding: 10 20 0 0">
@@ -1149,16 +1129,10 @@
 								padding-right:0; 
 								width:50%">
 						<p style="padding:24 0 0 48; 
-									color:grey; 
+									color:lightgrey; 
 									font-family:'Avenir', 'light'; 
 									font-size:18">
-							Discrete and Combinatorial Mathematics
-							<br>
-							<span style="font-size:16px">An Applied Introduction. 5E&ndash;PS</span>
-							<br>
-							&#9634; <span style="font-size:12px"> RALPH P. GRIMALDI</span> 
-							<br>
-							<span style="color:lightgrey; font-size:15px">Fundamental Principles of Counting</span>
+							Fundamental Principles of Counting
 						</p>
 						<div class="c1p6">
 							<table style="padding: 10 0 0 0">
@@ -1477,16 +1451,10 @@
 								width:50%">
 						<p style="padding-top:24; 
 									padding-left:48; 
-									color:grey; 
+									color:lightgrey; 
 									font-family:'Avenir', 'light'; 
 									font-size:18">
-							Discrete and Combinatorial Mathematics
-							<br>
-							<span style="font-size:16px">An Applied Introduction. 5E&ndash;PS</span>
-							<br>
-							&#9634; <span style="font-size:12px"> RALPH P. GRIMALDI</span> 
-							<br>
-							<span style="color:lightgrey; font-size:15px">Fundamental Principles of Counting</span>
+							Fundamental Principles of Counting
 						</p>
 						<div class="c1p12">
 							<table style="padding: 10 0 0 0">
@@ -1660,16 +1628,10 @@
 								width:50%">
 						<p style="padding-top:24; 
 									padding-left:48; 
-									color:grey; 
+									color:lightgrey; 
 									font-family:'Avenir', 'light'; 
 									font-size:18">
-							Discrete and Combinatorial Mathematics
-							<br>
-							<span style="font-size:16px">An Applied Introduction. 5E&ndash;PS</span>
-							<br>
-							&#9634; <span style="font-size:12px"> RALPH P. GRIMALDI</span> 
-							<br>
-							<span style="color:lightgrey; font-size:15px">Fundamental Principles of Counting</span>
+							Fundamental Principles of Counting
 						</p>
 						<div class="c1p12">
 							<table style="padding: 11 0 0 7">
@@ -1856,16 +1818,10 @@
 								padding:0 0 0 0;
 								width:50%">
 						<p style="padding:25 0 0 49; 
-									color:grey; 
+									color:lightgrey; 
 									font-family:'Avenir', 'light'; 
 									font-size:18">
-							Discrete and Combinatorial Mathematics
-							<br>
-							<span style="font-size:16px">An Applied Introduction. 5E&ndash;PS</span>
-							<br>
-							&#9634; <span style="font-size:12px"> RALPH P. GRIMALDI</span> 
-							<br>
-							<span style="color:lightgrey; font-size:15px">Fundamental Principles of Counting</span>
+							Fundamental Principles of Counting
 						</p>
 						<div class="c1p12">
 							<table style="padding:11 0 0 0">
@@ -2319,16 +2275,10 @@
 									padding:0 0 0 0;
 									width:50%">
 							<p style="padding:25 0 0 49; 
-										color:grey; 
+										color:lightgrey; 
 										font-family:'Avenir', 'light'; 
 										font-size:18">
-								Discrete and Combinatorial Mathematics
-								<br>
-								<span style="font-size:16px">An Applied Introduction. 5E&ndash;PS</span>
-								<br>
-								&#9634; <span style="font-size:12px"> RALPH P. GRIMALDI</span> 
-								<br>
-								<span style="color:lightgrey; font-size:15px">Fundamental Principles of Counting</span>
+								Fundamental Principles of Counting
 							</p>
 							<div class="c1p12">
 								<table style="padding:11 0 0 0">
@@ -2442,16 +2392,10 @@
 									padding:0 0 0 0;
 									width:50%">
 							<p style="padding:25 0 0 49; 
-										color:grey; 
+										color:lightgrey; 
 										font-family:'Avenir', 'light'; 
 										font-size:18">
-								Discrete and Combinatorial Mathematics
-								<br>
-								<span style="font-size:16px">An Applied Introduction. 5E&ndash;PS</span>
-								<br>
-								&#9634; <span style="font-size:12px"> RALPH P. GRIMALDI</span> 
-								<br>
-								<span style="color:lightgrey; font-size:15px">Fundamental Principles of Counting</span>
+								Fundamental Principles of Counting
 							</p>
 							<div class="c1p12">
 								<table style="padding:11 0 0 0">
@@ -2644,16 +2588,10 @@
 									padding:0 0 0 0;
 									width:50%">
 							<p style="padding:25 0 0 49; 
-										color:grey; 
+										color:lightgrey; 
 										font-family:'Avenir', 'light'; 
 										font-size:18">
-								Discrete and Combinatorial Mathematics
-								<br>
-								<span style="font-size:16px">An Applied Introduction. 5E&ndash;PS</span>
-								<br>
-								&#9634; <span style="font-size:12px"> RALPH P. GRIMALDI</span> 
-								<br>
-								<span style="color:lightgrey; font-size:15px">Numbers of Various Sorts</span>
+								Numbers of Various Sorts
 							</p>
 							<div class="c1p12">
 								<table style="padding:11 0 0 0">
