--- a/recursion/index.html
+++ b/recursion/index.html
@@ -86,7 +86,7 @@
 		    border-top: 1 solid #f2f2f2;
 		}
 		.c1p6 {
-		    height: 561 !important;
+		    height: 635 !important;
 		    overflow: scroll;
 		    font-size:15; 
 		    margin: 0 0 0 45;
@@ -1017,9 +1017,9 @@
 							    	<td style="vertical-align:top; padding: 0 0 0 0">11.</td>
 							    	<td style="vertical-align:top; padding: 0 0 0 10">
 							        	Three small towns designated by A, B, and C are interconnected by a system of two-way roads, as shown in Fig. 1.4.
-							        	<br>
-							        	<canvas id="C1_P11" data-processing-sources="C1_P11/C1_P11.pde" width="280" height="240"></canvas>
-							        	<br>
+							        	<div style="padding:10 0 5 0" align="center">
+							        		<canvas id="C1_P11" data-processing-sources="C1_P11/C1_P11.pde" width="280" height="240"></canvas>
+							        	</div>
 							        	<table>
 							        		<tr>
 							        			<td style="vertical-align:top; padding: 0 0 0 0">(a)</td>
@@ -1041,6 +1041,25 @@
 							        		</tr>
 							        	</table>
 							      	</td>
+							    </tr>
+							</table>
+							<table style="padding: 20 20 0 0">
+							    <tr>
+							    	<td style="vertical-align:top; padding: 0 0 0 0">12.</td>
+							    	<td style="vertical-align:top; padding: 0 0 0 10">
+							    		List all the permutations for the letters $a,c,t$.
+							    	</td>
+							    </tr>
+							</table>
+							<table style="padding: 20 20 0 0">
+							    <tr>
+							    	<td style="vertical-align:top; padding: 0 0 0 0">13.</td>
+							    	<td style="vertical-align:top; padding: 0 0 0 10">
+							    		<ol type="a" style="padding:0 10 0 20">
+							    			<li>How many permutations are there for the eight letters $a,c,f,g,i,t,w,x?$</li>
+							    			<li>Consider the permutations in (a). How many start with the letter $t$? How many start with the letter $t$ and end with the letter $c$?</li>
+							    		</ol>
+							    	</td>
 							    </tr>
 							</table>
 						</div>
