--- a/recursion/index.html
+++ b/recursion/index.html
@@ -1128,7 +1128,7 @@
 											</div>
 										</div>
 										<br>
-										both yield $15!$ possible arragements. Since there are 14 such possible subdivisions, the total number of ways in which Pamela can arrange her books under the given condition is $(14)(15!).$
+										both yield $15!$ possible arragements. Since there are 14 such possible subdivisions, the total number of ways in which Pamela can arrange her books under the given condition is $(14)(15!). \ \square$
 									</td>
 								</tr>
 							</table>
