--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
 							&#9634; <span style="font-size:12px">RALPH P. GRIMALDI</span>
 						</p>
 						<!-- Cover Art -->
-						<canvas id="recursion" data-processing-sources="recursion.pde" width="600" height="300"></canvas>
+						<canvas id="cantor_set" data-processing-sources="cantor_set/cantor_set.pde" width="600" height="300"></canvas>
 						<p style="color:#f2f2f2; font-size:22; text-align:center">
 							&lambda; &#9777; &#9778; &#9779; &#9780; &#9781; &#9782; &#9783; &#9777; &#9778; &#9779; &#9780; &#9781; &#9782; &#9783; &#9777;::...
 						</p>
