--- a/index.html
+++ b/index.html
@@ -1054,7 +1054,7 @@
 							    	<td style="vertical-align:top; padding: 0 0 0 10">
 							        	Three small towns designated by A, B, and C are interconnected by a system of two-way roads, as shown in Fig. 1.4.
 							        	<div style="padding:10 0 5 0; margin:0 0 0 50">
-							        		<canvas id="C1_P11" data-processing-sources="C1_P11/C1_P11.pde" width="280" height="240"></canvas>
+							        		<canvas id="C1_p11" data-processing-sources="C1_p11/c1_p11.pde" width="280" height="240"></canvas>
 							        	</div>
 							        	<table>
 							        		<tr>
