--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 		html{
 		   overflow-y: scroll;
 		}
+		code{font-size:14; background: #f2f2f2; color:grey;}
 
 		.unselectable {
 		    -webkit-touch-callout: none;
@@ -1132,6 +1133,63 @@
 									</td>
 								</tr>
 							</table>
+							<table style="padding: 20 20 0 0">
+								<tr>
+									<td style="vertical-align:top; padding:0 0 0 00">11.</td>
+									<td style="vertical-align:top; padding:0 0 0 10">
+										<ol type="a" style="padding:0 0 0 20">
+											<li>
+												There are four roads connecting towns A and B, and three roads from B to C. So, by the rule of product, there are $4\cdot3=12$ roads from A to C passing through B. Since there are two direct roads from A to C, there are $12+2=14$ destinct ways in which Linda can travel to C from A. $\square$
+											</li>
+											<li>
+												For each of these fourteen paths, Linda may select again (from the same pool of paths) to complete a round trip. Hence, by the rule of product, we find there are $14\cdot14=196$ distinct round trips from A to C and back again. $\square$
+											</li>
+											<li>
+												In this case, Linda has 14 options to get from A to C. For her return trip, however, she has all but that combination available to her. So there are $14\cdot13=182$ possible round trips in this scenario. $\square$
+											</li>
+										</ol>
+									</td>
+								</tr>
+							</table>
+							<table style="padding: 20 20 0 0">
+								<tr>
+									<td style="vertical-align:top; padding:20 0 0 00">12.</td>
+									<td style="vertical-align:top; padding:0 0 0 10">
+										<ul style="list-style-type:none; padding:0 0 0 0">
+											<li>
+												$
+												P=\begin{cases}
+													a & c & t & \\
+													a & t & c & \\
+													t & c & a & \\
+												\end{cases}
+												\
+												\begin{array}{lll}
+													c & a & t & \\
+													c & t & a & \\
+													t & a & c & 
+												\end{array}.\square
+												$
+											</li>
+										</u>
+									</td>
+								</tr>
+							</table>
+							<table style="padding: 20 20 0 0">
+								<tr>
+									<td style="vertical-align:top; padding:0 0 0 00">13.</td>
+									<td style="vertical-align:top; padding:0 0 0 10">
+										<ol type="a" style="padding:0 0 0 20">
+											<li>
+												$8!=P(8,8).$
+											</li>
+											<li>
+												$(7!, 6!)$
+											</li>
+										</ol>
+									</td>
+								</tr>
+							</table>
 						</div>
 					</td>
 				</tr>
@@ -1153,137 +1211,33 @@
 						<div class="c1p6">
 							<table style="padding: 10 0 0 0">
 								<tr>
-									<td style="vertical-align:top">
-										9.
-									</td>
-					        		<td style="padding: 1 20 0 10">
-					        			Express each of the following  with at least one less pair of absolute value signs.
-							            <table style="padding: 10 0 0 0">
-							            	<tr>
-							                	<td style="padding-left:0; vertical-align:top">(i)</td>
-							                	<td style="padding-left:10; vertical-align:top">
-							                  		$|\sqrt{2} + \sqrt{3} - \sqrt{5} + \sqrt{7}|.$
-							                	</td>
-							              	</tr>
-								             <tr>
-								             	<td style="padding-left:0; vertical-align:top">(ii)</td>
-								                <td style="padding-left:10; vertical-align:top">
-								                  	$|(|a+b| - |a| - |b|)|.$
-								                </td>
-								            </tr>
-								            <tr>
-								                <td style="padding-left:0; vertical-align:top">(iii)</td>
-								                <td style="padding-left:10; vertical-align:top">
-								                	$|(|a+b| + |c| - |a+b+c|)|.$
-								                </td>
-								            </tr>
-								            <tr>
-								                <td style="padding-left:0; vertical-align:top">(iv)</td>
-								                <td style="padding-left:10; vertical-align:top">
-								                  	$|x^2 - 2xy + y^2|.$
-								                </td>
-								            </tr>
-								            <tr>
-								                <td style="padding-left:0; vertical-align:top">(v)</td>
-								                <td style="padding-left:10; vertical-align:top">
-								                  	$|(|\sqrt{2} + \sqrt{3}| - |\sqrt{5} + \sqrt{7}|)|.$
-								                </td>
-								            </tr>
-							            </table>
+									<td style="vertical-align:top; padding: 0 00 0 00">14.</td>
+					        		<td style="vertical-align:top; padding: 0 20 0 10">
+					        			Evaluate each of the following
+					        			<br>
+					        			<br>
+							            a. $P(7,2)$ &nbsp;&nbsp; b. $P(8,4)$ &nbsp;&nbsp; c. $P(10,7)$ &nbsp;&nbsp; d. $P(12,3)$
 					        		</td>
 					      		</tr>
 					    	</table>
-							<table style="vertical-align:top; padding: 18 0 0 0">
+							<table style="vertical-align:top; padding: 20 0 0 0">
 							    <tr>
-							        <td style="vertical-align:top">10.</td>
-							        <td>
-							          <p style="padding-left:10">
-							            Express each of the following  without absolute value signs, treating various cases seperately when necessary.
-							          </p>
-							            <table>
-							              <tr>
-							                <td style="padding-left:10; vertical-align:top">(i)</td>
-							                <td style="padding-left:10; vertical-align:top">
-							                	$|a + b| - |b|.$
-							                </td>
-							              </tr>
-							              <tr>
-							                <td style="padding-left:10; vertical-align:top">(ii)</td>
-							                <td style="padding-left:10; vertical-align:top">
-							                	$|(|x| - 1)|.$
-							                </td>
-							              </tr>
-							              <tr>
-							                <td style="padding-left:10; vertical-align:top">(iii)</td>
-							                <td style="padding-left:10; vertical-align:top">
-							                	$|x| - |x^2|.$
-							                </td>
-							              </tr>
-							              <tr>
-							                <td style="padding-left:10; vertical-align:top">(iv)</td>
-							                <td style="padding-left:10; vertical-align:top">
-							                	$a - |(a - |a|)|.$
-							                </td>
-							              </tr>
-							            </table>
+									<td style="vertical-align:top; padding: 0 00 0 00">15.</td>
+					        		<td style="vertical-align:top; padding: 0 20 0 10">
+					        			In how many ways can the symbols 
+					        			<code>a,b,c,d,e,e,e,e,e</code> 
+					        			be arranged so that no 
+					        			<code>e</code> 
+					        			is adjacent to another 
+					        			<code>e</code>.
 							        </td>
 							    </tr>
 						    </table>
-						 	<table style="vertical-align:top; padding: 18 0 0 0">
+						 	<table style="vertical-align:top; padding: 20 20 0 0">
 						     	<tr>
-							        <td style="vertical-align:top">11.</td>
-							        <td style="padding-left: 10">
-							        	Find all numbers $x$ for which
-							            <table style="padding: 10 0 0 0">>
-							              <tr>
-							                <td style="padding-left:0; vertical-align:top">(i)</td>
-							                <td style="padding-left:10; vertical-align:top">
-							                  $|x-3|=8.$
-							                </td>
-							              </tr>
-							              <tr>
-							                <td style="padding-left:0; vertical-align:top">(ii)</td>
-							                <td style="padding-left:10; vertical-align:top">
-							                  $|x-3| < 8.$
-							                </td>
-							              </tr>
-							              <tr>
-							                <td style="padding-left:0; vertical-align:top">(iii)</td>
-							                <td style="padding-left:10; vertical-align:top">
-							                  $|x+4| < 2.$
-							                </td>
-							              </tr>
-							              <tr>
-							                <td style="padding-left:0; vertical-align:top">(iv)</td>
-							                <td style="padding-left:10; vertical-align:top">
-							                  $|x-1| + |x-2| > 1.$
-							                </td>
-							              </tr>
-							              <tr>
-							                <td style="padding-left:0; vertical-align:top">(v)</td>
-							                <td style="padding-left:10; vertical-align:top">
-							                  $|x-1| + |x+1| < 2.$
-							                </td>
-							              </tr>
-							              <tr>
-										    <td style="padding-left:0; vertical-align:top">(vi)</td>
-										    <td style="padding-left:10; vertical-align:top">
-										      $|x-1| + |x+1| < 1.$
-										    </td>
-										  </tr>
-										  <tr>
-										    <td style="padding-left:0; vertical-align:top">(vii)</td>
-										    <td style="padding-left:10; vertical-align:top">
-										    	$|x-1| \cdot |x+1| = 0.$
-										    </td>
-										  </tr>
-										  <tr>
-										    <td style="padding-left:0; vertical-align:top">(viii)</td>
-										    <td style="padding-left:10; vertical-align:top">
-										      $|x-1| \cdot |x+2| = 3.$
-										    </td>
-										  </tr>
-							            </table>
+									<td style="vertical-align:top; padding: 0 00 0 00">16.</td>
+					        		<td style="vertical-align:top; padding: 0 20 0 10">
+					        			An alphabet of 40 symbols is used for transmitting messeges in a communication system. How many distinct messeges (lists of symbols) of 25 symbols can the transmitter generate if symbols can be repeated in the message? How many if 10 of the 40 symbols can appear only as the first and/or last symbols of the messege, the other 30 symbols can appear anywhere, and repetitions of all symbols are allowed?
 							        </td>
 						      	</tr>
 						    </table>
@@ -3225,11 +3179,11 @@
 						          			<a class="pset1" onclick="currentDiv(4)">11</a>
 						          			<a class="pset1" onclick="currentDiv(4)">12</a>
 						          			<a class="pset1" onclick="currentDiv(4)">13</a>
-						          			<a class="pset1" onclick="currentDiv(7)">14</a>
-						          			<a class="pset1" onclick="currentDiv(7)">15</a>
+						          			<a class="pset1" onclick="currentDiv(5)">14</a>
+						          			<a class="pset1" onclick="currentDiv(5)">15</a>
 						          			<br>
-						          			<a class="pset1" onclick="currentDiv(7)">16</a>
-						          			<a class="pset1" onclick="currentDiv(8)">17</a>
+						          			<a class="pset1" onclick="currentDiv(5)">16</a>
+						          			<a class="pset1" onclick="currentDiv(5)">17</a>
 						          			<a class="pset1" onclick="currentDiv(8)">18</a>
 						          			<a class="pset1" onclick="currentDiv(8)">19</a>
 						          			<a class="pset1" onclick="currentDiv(9)">20</a>
